--- a/pyproject.toml
+++ b/pyproject.toml
@@ -319,3 +319,7 @@ ignore_missing_imports = true
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pyright]
+include = ["langflow", "src/langflow-api"]
+extraPaths = ["src/langflow-api/src"]
+
